Sort by waiting

--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,8 @@
     </head>
     <body>
         <h2>Turnip Exchange Sort</h2>
-        <button id="sort">SORT BY PRICE</button>
+        <button id="price">SORT BY PRICE</button>
+        <button id="waiting">SORT BY WAITING</button>
         <p>If sorting doesn't work, refresh and try again.</p>
     </body>
     <script src="popup.js"></script>
